# bf2-www

./: .dockerignore  .env  .envrc  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  flake.nix  fly.toml  pyproject.toml
.github/workflows/: black.yaml  test.yaml
config/: entrypoint.sh  update-cert.sh
config/nginx/conf.d/: local.conf
config/nginx/templates/: local.conf.template
website/: DOCS.md
website/boards/: DOCS.md  admin.py  cms_plugins.py  models.py
website/boards/migrations/: 0001_initial_squashed_0003_auto_20210127_2041.py  0002_auto_20210130_1003.py  0003_auto_20210209_1951.py  0003_previousboardmodel.py  0004_merge_20210302_2121.py  0004_merge_20210302_2218.py  0005_auto_20210831_1211.py  0006_auto_20210831_1401.py  0006_auto_20210901_1108.py  0007_alter_previousboardmodel_cmsplugin_ptr.py
website/boards/templates/: current_board_plugin.html  previous_board_plugin.html
website/committees/: admin.py  apps.py  cms_apps.py  models.py  urls.py  views.py
website/committees/migrations/: 0001_initial.py  0002_alter_committee_permissions.py  0003_auto_20211217_1527.py  0004_alter_committee_perm_group.py  0005_alter_committee_perm_group.py  0006_committee_is_staff.py  0007_committee_show_in_achievements.py
website/events/: admin.py  cms_apps.py  models.py  urls.py  views.py
website/events/migrations/: 0001_initial.py  0002_auto_20200901_1935.py  0003_auto_20200901_2005.py  0004_auto_20210209_1951.py  0005_auto_20210302_2014.py  0005_auto_20210302_2045.py  0006_merge_20210302_2218.py  0007_auto_20210321_1018.py  0008_event_image.py  0009_alter_event_cost.py  0010_alter_event_end_date.py  0010_event_form_link.py  0010_event_private_registrations.py  0011_alter_event_end_date.py  0011_event_show_end_date.py  0012_merge_0010_event_form_link_0011_event_show_end_date.py  0013_alter_event_form_link.py  0014_alter_event_cost.py  0014_remove_event_cost_event_cost_en_event_cost_nl.py  0015_alter_event_cost.py  0016_auto_20221123_1545.py  0017_auto_20221123_1553.py  0018_auto_20221123_1555.py
website/events/templatetags/: events_datetimerange.py
website/members/: admin.py  cms_apps.py  forms.py  models.py  sitemaps.py  tokens.py  urls.py  views.py
website/members/migrations/: 0001_initial.py  0002_member_student_type.py  0003_auto_20201221_1620.py  0004_auto_20210209_1951.py  0005_auto_20210224_2042.py  0005_auto_20210302_2045.py  0006_member_other_club.py  0007_auto_20210224_2056.py  0008_auto_20210224_2115.py  0009_auto_20210224_2117.py  0010_auto_20210224_2120.py  0011_auto_20210224_2141.py  0012_auto_20210302_2014.py  0013_merge_20210302_2218.py  0014_auto_20210309_2133.py  0014_auto_20210320_1059.py  0015_auto_20210309_2234.py  0015_auto_20210330_1823.py  0016_merge_20210325_2053.py  0017_merge_20210402_1333.py  0017_merge_20210402_1335.py  0018_member_gender.py  0018_merge_20210420_1321.py  0019_auto_20210624_1117.py  0019_privacyfile.py  0020_auto_20210624_1204.py  0020_rename_privacyfile_membersettings.py  0021_auto_20210624_1515.py  0021_rename_file_membersettings_privacyfile.py  0022_merge_20210624_1602.py  0023_alter_member_picture_publication_acceptation.py  0023_auto_20210701_1243.py  0024_auto_20210709_1447.py  0024_auto_20210809_1118.py  0024_merge_20210802_1043.py  0025_merge_0024_auto_20210709_1447_0024_auto_20210809_1118.py  0025_merge_20210811_1415.py  0026_merge_20210811_1427.py  0027_auto_20210811_1527.py  0028_auto_20210822_1148.py  (+15 more)
website/socialgraph/: admin.py  apps.py  forms.py  models.py  views.py
website/socialgraph/migrations/: 0001_initial.py  0002_remove_relation_remarks.py
website/templates/: base.html  current_board_plugin.html
website/utils/: translations.py
website/website/: DOCS.md  admin.py  apps.py  asgi.py  cms_menus.py  cms_plugins.py  context_processors.py  models.py  settings.py  urls.py  wsgi.py
(+77 files in other folders)
