[tool.poetry]
name = "bf2-www"
version = "0.1.0"
description = "A website for the BF2 frisbee team"
authors = ["Luko van der Maas <me@luko.dev>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
django-cms = "^4.1.4"
djangocms-text-ckeditor = "^5.1.3"
django-filer = "^3.3.0"
psycopg2-binary = {version = "^2.9.8", optional = true, extras = ["production"]}
gunicorn = "22.0.0"
Pillow = "^9.4.0"
django-import-export = "^3.3.1"
django-sass-processor = "^1.2.2"
django-compressor = {version = "^4.4", extras = ["production"]}
django-mail-template = "^0.1.11"
libsass = "^0.22.0"
ics = "^0.7.2"
setuptools = "70.0.0"
django-mptt = "^0.15.0"
djangocms-versioning = "^2.1.0"
djangocms-alias = "^2.0.1"
djangocms-admin-style = "^3.3.1"
djangocms-frontend = "^1.3.5"
djangocms-file = "^3.0.1"
djangocms-picture = "^4.1.1"
djangocms-video = "^3.1.0"
djangocms-googlemap = "^2.2.0"
djangocms-snippet = "^3.1.1"
djangocms-style = "^3.1.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
djangocms-4-migration = "0.0.2"

[tool.poetry.extras]
production = ["gunicorn", "psycopg2-binary"]

[tool.black]
exclude = '(/(\.eggs|\.git|\.tox)/|migrations)'

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
